--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "node server/server.js",
     "dev": "nodemon index.js",
     "version1": "nodemon server/server.js"
   },
