--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node server/server.js",
+    "start": "node server/server.1.js",
     "dev": "nodemon index.js",
 	"version1": "nodemon server/server.js",
 	"version-tsc": "nodemon server/server.1.js"
